Fix Identation / Change package.json

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -3,6 +3,7 @@
     "name": "Be The Hero",
     "slug": "bethehero",
     "privacy": "public",
+    "sdkVersion": "36.0.0",
     "platforms": [
       "ios",
       "android",
@@ -14,7 +15,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#E02041"
+      "backgroundColor": "#e02041"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
